--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.application.name=demo
+spring.application.name=bookalyze-api
+
+spring.datasource.url=jdbc:mysql://localhost:3306/booksite_db
+spring.datasource.username=root
+spring.datasource.password=Pepinosdahorta1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
